--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,6 +9,7 @@
         <nav class="header-nav">
           <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">Inventory</a>
           <a routerLink="/fermentables" routerLinkActive="active" class="nav-link">Fermentables</a>
+          <a routerLink="/hops" routerLinkActive="active" class="nav-link">Hops</a>
           <a href="#" class="nav-link">Recipes</a>
           <a href="#" class="nav-link">Settings</a>
         </nav>
