--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,6 +11,7 @@
           <a routerLink="/fermentables" routerLinkActive="active" class="nav-link">Fermentables</a>
           <a routerLink="/hops" routerLinkActive="active" class="nav-link">Hops</a>
           <a routerLink="/yeasts" routerLinkActive="active" class="nav-link">Yeasts</a>
+          <a routerLink="/miscs" routerLinkActive="active" class="nav-link">Miscs</a>
           <a href="#" class="nav-link">Recipes</a>
           <a href="#" class="nav-link">Settings</a>
         </nav>
