--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,8 +11,8 @@
           <a routerLink="/hops" routerLinkActive="active" class="nav-link">Hops</a>
           <a routerLink="/yeasts" routerLinkActive="active" class="nav-link">Yeasts</a>
           <a routerLink="/miscs" routerLinkActive="active" class="nav-link">Miscs</a>
+          <a routerLink="/recipes" routerLinkActive="active" class="nav-link">Recipes</a>
           <a routerLink="/sync" routerLinkActive="active" class="nav-link">Sync</a>
-          <a href="#" class="nav-link">Recipes</a>
         </nav>
       </div>
     </div>
